--- a/client/views/new-trip.html
+++ b/client/views/new-trip.html
@@ -1,37 +1,37 @@
-<div layout="column" ng-cloak class="md-inline-form">
+<div ng-controller="tripCtrl" layout="column" ng-cloak class="md-inline-form">
   <md-toolbar class="md-theme-light">
    <h2 class="md-toolbar-tools">
      <span>Let's Plan An Adventure!</span>
    </h2>
  </md-toolbar>
   <md-content layout-gt-sm="row" layout-padding>
-    <form ng-submit="$event.preventDefault()">
+    <form>
       <div layout-gt-sm="row">
           <md-input-container class="md-block" flex-gt-sm>
             <label>Destination</label>
-            <input ng-model="trip.destination">
+            <input ng-model="destination" />
           </md-input-container>
         </div>
         <div layout-gt-sm="row">
-          <md-datepicker ng-model="trip.arrivalDate" md-placeholder="Arriving date">
+          <md-datepicker ng-model="arrivalDate" md-placeholder="Arriving date">
             </md-datepicker>
-            <md-datepicker ng-model="trip.departDate" md-placeholder="Departing date">
+            <md-datepicker ng-model="departDate" md-placeholder="Departing date">
           </md-datepicker>
         </div>
           </br/>
         <div layout-gt-sm="row">
           <md-input-container class="md-block" flex-gt-sm>
             <label>Amount to Save</label>
-            <input ng-model="trip.amountToSave">
+            <input ng-model="amountToSave" />
           </md-input-container>
         </div>
         <div layout-gt-sm="column">
           <md-input-container class="md-block" flex-gt-sm>
             <label>Initial Deposit</label>
-            <input ng-model="trip.amountDeposited">
+            <input ng-model="amountDeposited" />
           </md-input-container>
           <md-input-container class="md-block" flex-gt-sm>
-            <md-button class="md-raised md-primary" ng-click="hide(ev)">Primary</md-button>
+            <md-button class="md-raised md-primary" ng-click="createTrip(destination, arrivalDate, departDate, amountToSave, amountDeposited)">Create Trip!</md-button>
           </md-input-container>
         </div>
     </form>
