--- a/client/views/new-trip.html
+++ b/client/views/new-trip.html
@@ -27,11 +27,7 @@
         </div>
         <div layout-gt-sm="column">
           <md-input-container class="md-block" flex-gt-sm>
-            <label>Initial Deposit</label>
-            <input ng-model="amountDeposited" />
-          </md-input-container>
-          <md-input-container class="md-block" flex-gt-sm>
-            <md-button class="md-raised md-primary" ng-click="createTrip(destination, arrivalDate, departDate, amountToSave, amountDeposited)">Create Trip!</md-button>
+            <md-button class="md-raised md-primary" ng-click="createTrip(destination, arrivalDate, departDate, amountToSave)">Create Trip!</md-button>
           </md-input-container>
         </div>
     </form>
