--- a/client/css/style.css
+++ b/client/css/style.css
@@ -91,3 +91,12 @@
 	-o-transition: none;
 	transition: none;
 }
+
+.progress {
+    height: 35px;
+    margin-bottom: 5px;
+    overflow: hidden;
+    background-color: #f5f5f5;
+    border-radius: 4px;
+    box-shadow: inset 0 1px 10px rgba(0,0,0,.1);
+}
